gking: fix box config link position inside tabs. Pager/throbber: fix jumping effect

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -852,6 +852,19 @@ border:none;
 
 .quicktabs_wrapper .quicktabs_tabpage {margin-top:55px; margin-bottom: 16px;}
 
+.quicktabs_tabpage .os-links:nth-of-type(1) {
+    height: 18px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 0;
+    padding-top: 0;
+    position: absolute;
+    right: -25px;
+    top: 0;
+    width: 14px;
+    z-index: 2;
+}
+
 .box-os_modal_tabbed h3.title {font-size: 21px;}
 
 /* FOOTER */
